# sonnet_codex

./: .coverage  .flake8  .gitignore  AGENTS.md  AGENTS.md.bak  CODEX_HEADLESS_GUIDE.md  Makefile  OPEN_POINTS.md  PROGRESS.md  README.md  codex_prompt.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.codex/sessions/2025/11/04/: rollout-2025-11-04T18-56-07-019a4e4b-9578-70f3-a182-5528dbf4397f.jsonl
.github/workflows/: ci.yml
.home/.codex/sessions/2025/11/04/: rollout-2025-11-04T20-20-04-019a4e98-70be-7231-af07-6f4643abc9e4.jsonl  rollout-2025-11-04T20-28-22-019a4ea0-0b6d-73c0-8ecd-160aa36e53f9.jsonl  rollout-2025-11-04T20-30-43-019a4ea2-31d0-7f50-910b-3b652a6075e4.jsonl  (+5 more)
doc/: 00_DEVELOPMENT_RULES_AND_HIGH_QUALITY_PROMPTS.md  00_INTEGRATED_DESIGN_OVERVIEW.md  01_REQUIREMENTS_SPECIFICATION_DETAILED.md  02_NON_FUNCTIONAL_REQUIREMENTS.md  03_ARCHITECTURE_DESIGN_DETAILED.md  04_CLASS_DESIGN_DETAILED.md  05_DATABASE_DESIGN_DETAILED.md  06_API_DESIGN_DETAILED.md  07_IMPLEMENTATION_GUIDE.md  08_CODING_STANDARDS.md  09_TESTING_STRATEGY.md  10_DEPLOYMENT_GUIDE.md  11_OPERATIONS_RUNBOOK.md  12_MONITORING_GUIDE.md  13_PROJECT_SCHEDULE.md  15_TROUBLESHOOTING_GUIDE.docx  16_PERFORMANCE_TUNING.docx  17_BACKUP_RECOVERY.md  18_QUICKSTART.md  19_FAQ.md  C4_ARCHITECTURE_DIAGRAMS.md  CODEX_PHASE1_QUICKSTART.md  CODEX_SEMI_AUTOMATED_DEVELOPMENT_PROMPT.md  ChatGPT-システム機能の分析.md  Claude-Changelog documentation structure.md  Claude-Detailed integrated design document creation.md  Claude-Developer guide and contribution process.md  Claude-Sequence diagrams in Mermaid notation.md  DATABASE_AND_TOOLS_CONFIGURATION.md  ER_AND_CLASS_DIAGRAMS.md  SEQUENCE_DIAGRAMS_DETAILED.md  consistency_analysis_report.md
logs/: plan.md  push_instructions.md  summary.md
scripts/: verify.sh
sonnet_codex_headless_pack/: OPEN_POINTS.md
src/nf_auto_runner/: py.typed
src/nf_auto_runner/config/: __init__.py  base.py  execution.py  loader.py  model_selection.py  path.py
src/nf_auto_runner/data/: __init__.py  data_loader.py
src/nf_auto_runner/logging/: __init__.py  structured.py
tests/unit/config/: test_base.py  test_execution.py  test_loader.py  test_model_selection.py  test_path.py
tests/unit/data/: test_data_loader.py
tests/unit/logging/: test_structured_logger.py
tmp/: requirements_io.yaml
tmp/runtime_check/artifacts/runtime-test/: metrics.json
tmp/runtime_check/models/: runtime-test_AutoTest.pth
tools/: update_summary_locations.py
